--- a/app/src/main/res/layout/activity_playing_music.xml
+++ b/app/src/main/res/layout/activity_playing_music.xml
@@ -126,6 +126,7 @@
                 />
 
             <SeekBar
+                android:id="@+id/seekbar"
                 android:layout_width="280dp"
                 android:layout_height="20dp"
                 android:layout_alignParentTop="true"
@@ -133,31 +134,33 @@
                 android:layout_marginTop="440dp"
                 android:max="@integer/material_motion_duration_long_1"
                 android:progress="0"
-                android:thumb="@drawable/ic_thumb"/>
+                android:thumb="@drawable/ic_thumb" />
 
             <TextView
+                android:id="@+id/player_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="465dp"
                 android:layout_marginLeft="45dp"
-                android:textStyle="bold"
+                android:layout_marginTop="465dp"
                 android:text="00:00"
                 android:textColor="#393E46"
-                />
+                android:textStyle="bold" />
+
             <TextView
+                android:id="@+id/player_duration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="465dp"
                 android:layout_alignParentRight="true"
+                android:layout_marginTop="465dp"
                 android:layout_marginRight="45dp"
-                android:textStyle="bold"
                 android:text="00:00"
                 android:textColor="#393E46"
-                />
+                android:textStyle="bold" />
 
             <ImageButton
+                android:id="@+id/btplay"
                 android:layout_width="69dp"
                 android:layout_height="69dp"
                 android:layout_alignParentTop="true"
@@ -166,29 +169,35 @@
                 android:background="@drawable/ic_resume_button" />
 
             <ImageButton
+                android:id="@+id/btpause"
                 android:layout_width="69dp"
                 android:layout_height="69dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="500dp"
-                android:background="@drawable/ic_pause_button" />
+                android:background="@drawable/ic_pause_button"
+                android:visibility="gone"
+                />
 
             <ImageButton
-            android:layout_width="46dp"
-            android:layout_height="46dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="68dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="512dp"
-            android:background="@drawable/ic_rewind_button" />
-
-            <ImageButton
+                android:id="@+id/btrewind"
                 android:layout_width="46dp"
                 android:layout_height="46dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="68dp"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginLeft="68dp"
                 android:layout_marginTop="512dp"
+                android:background="@drawable/ic_rewind_button"
+                />
+
+            <ImageButton
+                android:id="@+id/btnext"
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="512dp"
+                android:layout_marginRight="68dp"
                 android:background="@drawable/ic_next_button" />
 
         </RelativeLayout>
