--- a/app/src/main/res/layout/activity_liked_song.xml
+++ b/app/src/main/res/layout/activity_liked_song.xml
@@ -113,26 +113,26 @@
                         <ImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:background="@drawable/slider1"
-                            android:scaleType="centerCrop" />
+                            android:src="@drawable/unsplash_1" />
+
                     </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="230dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="The Path (ft. Agassi) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="230dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Wiguez and EH!DE"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -165,7 +165,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Hurt Me [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -175,7 +175,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Evanly"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -204,11 +204,11 @@
                     </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="230dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Royalty (ft. Neoni) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -218,7 +218,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Egzod and Maestro Chives"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -247,11 +247,11 @@
                     </androidx.cardview.widget.CardView>
 
                     <TextView
-                        android:layout_width="200dp"
+                        android:layout_width="240dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Where We Started (feat. Jex) [NCS]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -261,7 +261,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Lost Sky"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -294,7 +294,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="On and On (feat. Daniel Levi) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -304,7 +304,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Cartoon"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
@@ -337,7 +337,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="5dp"
-                        android:text="Judul Lagu"
+                        android:text="Make Me Move (feat. Karra) [NCS]"
                         android:textColor="#FFFF"
                         android:textSize="14dp"
                         android:textStyle="bold" />
@@ -347,7 +347,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="65dp"
                         android:layout_marginTop="25dp"
-                        android:text="Artist"
+                        android:text="Culture Code"
                         android:textColor="#FFFF"
                         android:textSize="12dp"
                         android:textStyle="normal" />
