--- a/app/src/main/res/layout/activity_library.xml
+++ b/app/src/main/res/layout/activity_library.xml
@@ -54,7 +54,7 @@
                 <ImageView
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:background="@drawable/gambar_contoh"
+                    android:background="@drawable/profile_01"
                     android:scaleType="centerCrop" />
 
             </androidx.cardview.widget.CardView>
@@ -122,7 +122,7 @@
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:background="@drawable/gambar_contoh" />
+                            android:background="@drawable/profile_02" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -159,7 +159,7 @@
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:background="@drawable/gambar_contoh" />
+                            android:background="@drawable/profile_03" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -196,7 +196,7 @@
                         <ImageView
                             android:layout_width="70dp"
                             android:layout_height="70dp"
-                            android:background="@drawable/gambar_contoh" />
+                            android:background="@drawable/profile_04" />
 
                     </androidx.cardview.widget.CardView>
 
