--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -119,7 +119,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="80dp"
                         android:layout_marginTop="15dp"
-                        android:text="Judul Lagu 1"
+                        android:text="Make Me Move (feat. Karra) [NCS]"
                         android:textColor="#FFFF"
                         android:textSize="14dp" />
 
@@ -129,7 +129,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="80dp"
                         android:layout_marginTop="37dp"
-                        android:text="nama artis 1"
+                        android:text="Culture Code"
                         android:textColor="#FFFF"
                         android:textSize="12dp" />
 
@@ -164,7 +164,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="80dp"
                         android:layout_marginTop="15dp"
-                        android:text="Judul Lagu 1"
+                        android:text="On and On (feat. Daniel Levi) [NCS Release]"
                         android:textColor="#FFFF"
                         android:textSize="14dp" />
 
@@ -174,7 +174,7 @@
                         android:layout_height="20dp"
                         android:layout_marginLeft="80dp"
                         android:layout_marginTop="37dp"
-                        android:text="nama artis 1"
+                        android:text="Cartoon"
                         android:textColor="#FFFF"
                         android:textSize="12dp" />
 
