--- a/app/src/main/res/layout/activity_playing_music.xml
+++ b/app/src/main/res/layout/activity_playing_music.xml
@@ -57,34 +57,34 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/slider1"
+            android:src="@drawable/playing_music_02"
             android:scaleType="centerCrop"
             />
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/judul_lagu_pliying"
-        android:layout_width="300dp"
-        android:layout_height="36dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="358dp"
-        android:text="Judul lagu"
-        android:textColor="#FFFF"
-        android:textSize="24dp"
-        android:textAlignment="center"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/judul_lagu_playing"
+                android:layout_width="300dp"
+                android:layout_height="36dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="358dp"
+                android:singleLine="true"
+                android:text="Superhero (feat. Chris Linton) dsadasdasdasdasdasdsadasdasdasdasdasdadas"
+                android:textAlignment="center"
+                android:textColor="#FFFF"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/artist_lagu_pliying"
-        android:layout_width="300dp"
-        android:layout_height="36dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="393dp"
-        android:text="nama artist"
-        android:textColor="#B1B1B1"
-        android:textSize="14dp"
-        android:textAlignment="center"
-        />
+            <TextView
+                android:id="@+id/artist_lagu_pliying"
+                android:layout_width="300dp"
+                android:layout_height="36dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="393dp"
+                android:text="Unknown Brain"
+                android:textAlignment="center"
+                android:textColor="#B1B1B1"
+                android:textSize="17dp" />
 
 
             <ImageView
@@ -118,12 +118,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="660dp"
-                android:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
-                android:textColor="#FFFF"
+                android:layout_marginRight="10dp"
+                android:text=""
                 android:textAlignment="center"
-                />
+                android:textColor="#FFFF" />
 
             <SeekBar
                 android:id="@+id/seekbar"
