--- a/app/src/main/res/layout/activity_setting_play_music.xml
+++ b/app/src/main/res/layout/activity_setting_play_music.xml
@@ -29,24 +29,25 @@
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="265dp"
+                android:background="@drawable/playing_music_01"
                 />
         </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/judul_music"
-            android:layout_width="134dp"
+            android:layout_width="300dp"
             android:layout_height="30dp"
             android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="418dp"
             android:text="Lorem Ipsum"
+            android:textAlignment="center"
             android:textColor="#FFFF"
             android:textSize="22dp"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            />
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_width="78dp"
+            android:layout_width="200dp"
             android:layout_height="18dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
@@ -54,6 +55,7 @@
             android:text="Lorem Ipsum"
             android:textColor="#FFFF"
             android:textSize="13dp"
+            android:textAlignment="center"
             />
 
         <TextView
