--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -97,19 +97,17 @@
                 />
 
 
-
-
-        <TextView
-            android:id="@+id/Recently_Played"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="27dp"
-            android:layout_marginTop="466dp"
-            android:layout_alignParentTop="true"
-            android:text="Recently Played"
-            android:textColor="#ffff"
-            android:textSize="14dp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/Recently_Played"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="27dp"
+                android:layout_marginTop="466dp"
+                android:text="Recently Played"
+                android:textColor="#ffff"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/txt_seeall2"
@@ -119,10 +117,10 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="466dp"
                 android:layout_marginRight="27dp"
-                android:onClick="signup"
                 android:text="See All"
                 android:textColor="#FFFFFF"
-                tools:ignore="OnClick,TouchTargetSizeCheck" />
+                android:clickable="true"
+                />
 
             //List lagu Recently Played
 
